@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-10T16:07:09Z",
+  "timestamp" : "2022-06-11T00:30:44Z",
   "count_outdated" : 1547,
   "uniques_outdated" : 417,
-  "count" : 1580,
+  "count" : 1581,
   "uniques" : 435,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
